# traglodit501

./: .gitignore  CMakeLists.txt  README.md
scratch.dSYM/Contents/Resources/DWARF/: scratch
src/: constants.h  main.cpp  types.h
src/Trie/: HuffmanTree.cpp  HuffmanTree.h  Node.h
src/argparse/: Command.h
src/decoder/: decoder.cpp  decoder.h
src/encoder/: encoder.cpp  encoder.h
src/encoder/HuffmanTree/: HuffmanTree.cpp  HuffmanTree.h  Node.h
src/encoder/huffman_tree/: HuffmanTree.cpp  HuffmanTree.h  Node.h
src/exceptions/: exceptions.h
src/huffman_tree/: HuffmanTree.cpp  HuffmanTree.h
src/test/: test.sh
